2003-07-17	ujwal

    * Disabled code in eraseDisplay where contents were saved in the scrollback buffer 
      since it was not right. Needs more thought and work.

2003-07-16	ujwal

    * Added support for ANSI 16 color sequences.
    
    * Added support for alternate screen buffer mode.
    
    * When display is erased, contents are stored in scrollback buffer.

2003-07-09	ujwal

    * Made a change in PTYSession: insertText to always use dataUsingEncoding.

2003-06-27	ujwal

    * Version number is 0.7.6

2003-06-26	ujwal

    * Put in a "Default Sessions" button in the preferences pane 
      for easy access.
      
    * Fixed bug in saving sessions.
    
    * Fixed "Clear Scrollback Buffer" bug in VT100Typesetter.

2003-06-22	ujwal

    * Updated documentation.
    
    * Remapping of delete key can be toggled with Alt-Delete sequence.
    
    * Fixed a bug in [VT100TextStorage replaceCharactersInRange] optimization.
    
    * Added keyboard shortcut to cycle through terminal windows.

2003-06-21	ujwal

    * Version string in "About" box is dynamically generated.
    
    * Changed version number to 0.7.5

2003-06-19	ujwal

    * Updated localizations.

2003-06-18	ujwal

    * Updated Korean translation from TaeYoung Oh.

    * Added UI preference to enforce character alignment.
    
    * Removed "Save" and "Cancel" buttons from Bookmarks window.
    
    * Added support to select and launch multiple sessions in bookmarks.

2003-06-16	ujwal

    * Improved printing support.

2003-06-15	ujwal

    * Incorporated Peter Lewis' "Paste Selection" patch.

2003-06-14	ujwal

    * Reverted back to v1.20 of VT100Typesetter accunting for line 
      endings at the end of the line instead of beginning since the 
      other version was more problematic. This version now handles 
      new line characters at the end correctly.
      
2003-06-13	ujwal

    * Fixed bug in VT100Typesetter line bounds calculation where 